2005-03-08 Ales Hvezda   <ahvezda@geda.seul.org>

        * configure.ac: Bumped version to 20050313

2005-03-06 Ales Hvezda   <ahvezda@geda.seul.org>

	* src/gattrib.c: Fixed code to allow user to specify absolute
        filenames on the command line again.

2005-03-06 Stuart Brorson <sdb@cloud9.net>

	* src/s_table.c, src/x_dialog.c: Fix some uninitialized variables
	found by Dan McMahill & -wall gcc warning.
	
2005-02-21 05:29  Dan McMahill <danmc>

	* configure.ac, include/prototype.h, include/struct.h,
	  include/x_menu.h, src/Makefile.am, src/gattrib.c, src/listsort.c,
	  src/s_sheet_data.c, src/s_table.c, src/s_toplevel.c,
	  src/x_dialog.c, src/x_fileselect.c, src/x_gtksheet.c: Fix many
	  instances of non-void functions not having return values.  Most
	  of these were simply changed to void functions since nothing
	  seemed to be expecting a return value.  While here, garbage
	  collect several unused variables to make the compiler warnings
	  easier to dig through.  Also if we're using gcc, then turn on
	  -Wall.

2005-02-21 03:58  Dan McMahill <danmc>

	* autogen.sh: avoid using the '-path' primary to find(1) as it's an
	  extension to posix.2 and is not supported on some operating
	  systems such as solaris.  Now we can autogen.sh on solaris 9.

2005-02-20  Patrick Bernaud  <b-patrick@wanadoo.fr>

	* src/gattrib.c (gattrib_main): Adapted for new logging system.

2005-02-19  Carlos Nieves Onega <cnieves@iespana.es>

	* src/globals.c: Added definition of picture_draw_func after 
	adding picture support to libgeda.
	
2005-02-15 18:32  Stuart Brorson <sdb@cloud9.net>

	* src/x_dialog.c: Modified GTK buttons slightly so the captions 
	fit the button, and the button usage matches the text.

2005-02-14 22:31  Dan McMahill <danmc>

	* src/: gtkextra-marshal.c, gtkitementry_1_2.c, listsort.c: add
	  some missing config.h inclusions

2005-02-14 22:27  Dan McMahill <danmc>

	* src/x_dialog.c: - move the config.h inclusion higher up so the