@@ -1,3 +1,7 @@
+2005-03-11 12:30 Stuart Brorson <sdb@cloud9.net>
+        * src/gtksheet*.c:  Incorporated definitions of default_border* 
+	as suggested by Carlos.  A couple other possible bugfixes also.
+
 2005-03-08 Ales Hvezda   <ahvezda@geda.seul.org>
 
         * configure.ac: Bumped version to 20050313
